2005-05-12  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-timestamp): Use existing
	XML-parsing functions instead of a special one for
	timestamp. Function now returns a time value.

	* delicioapi.el (delicious-api-parse-timestamp): Deleted, since
	we're using the existing XML-parsing functions.
	
2005-05-10  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-parse-timestamp): New function.
	(delicious-api-get-timestamp): New function to make the API call
	to get the timestamp of the last update from the server.

	* delicious.el (delicious-build-posts-list): Added "Done" message.

2005-05-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-guess-url): Fixed bug caused by recent
	changes in url guessing that required something to be in the
	clipboard before posting. 

2005-05-06  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-get-posts-from-stored): Added new
	argument TAG-MATCH-TYPE. Instead of filtering posts by a regexp
	for tags, the user can now specify whether they want posts with
	all of the tags, or with any of the tags. Broke filtering logic
	into separate functions.
	(delicious-test-tag-all): New function to test whether a post has
	all of the given tags.
	(delicious-test-tag-any): New function to test whether a post has
	any of the given tags.

	* planner-delicious.el (planner-delicious-insert-posts): Updated
	to use new format of `delicious-get-posts-from-stored'.

	* delicious.el (delicious-test-date-regexp): New function to find 
	posts with dates matching a regexp.

2005-05-06  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-complete-tags): Fixed mistake in number
	of arguments for prompt format string.

2005-05-04  johnsu01  <john@wjsullivan.net>

	* delicioapi.el: Updated FSF address in copyright header.
	(delicious-api-post): Fixed long lines.
	(delicious-api-get-tags): Fixed long lines.

	* delicious.el: Updated FSF address in copyright header.
